--- a/Baker's Dozen Prototype/HTML/index.html
+++ b/Baker's Dozen Prototype/HTML/index.html
@@ -14,9 +14,11 @@
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
 
-    <!--FontAwsome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
     <!--Our Main CSS-->
     <link rel="stylesheet" href="../CSS/style.css">
@@ -24,79 +26,145 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-light">
-        <div class="container-fluid">
+    <nav class="navbar fixed-top navbar-expand-lg nav-bg-white opacity-100">
+        <div class="container-fluid ">
             <a class="navbar-brand" href="index.html">
-                <img src="../Images/Logo.png" alt="Logo" width="200" class="d-inline-block align-text-top">
+                <img src="../Images/Logo.png" alt="Logo" width="150" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mx-auto px-5">
                     <li class="nav-item">
-                        <a class="nav-link " href="bakingKit.html">Baking Kit</a>
+                        <a class="nav-link" href="subscriptionKit.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="howItWorks.html">How It Works</a>
+                        <a class="nav-link " href="bakingKit.html">RECIPES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="subscriptionKit.html">Subscription Kit</a>
+                        <a class="nav-link" href="howItWorks.html">HOW IT WORKS</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="shoppingCart.html"><i
+                                class="fa-solid fa-cart-shopping"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html">Cart
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="account.html">Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-danger" href="login.html">Login</a>
+                        <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <img src="../Images/homeImage.jpg" class="homeImageStyling" alt="">
+    <div class="">
+        <img src="../Images/homeImage2.jpg" class="homeImageStyling" alt="">
+        <h2 class="homeImageText">WONDEFUL TREATS,</h2><br>
+        <h2 class="homeImageText2"> MADE RIGHT AT HOME.</h2>
+        <a class="homeImageBtn btn" href="#">Take a look at our recipes</a>
+    </div>
 
-    <div class="sm-cards-showcase ">
+    <h1 class="p-5 offerText" id="offer">WHAT DO WE OFFER?</h1>
+    <div class="sm-cards-showcase p-3">
         <div class="row">
-            <div class="col-lg-4 col-sm-4">
-                <div class="card bg-light">
+            <div class="col-lg-4 col-sm-4 ">
+                <div class="card card-bg-white border-0">
                     <img src="../Images/mysterybox.jpg" class="card-img-top cardImageStyling" alt="Subscription Box">
                     <div class="card-body">
                         <h5 class="card-title text-dark">Mystery Box</h5>
-                        <p class="card-text text-dark">From classic rock to modern rock, we've got it all. Browse our collection here!</p>
-                        <a href="records.html" class="btn btn-dark bg-white text-dark">Take Me There</a>
+                        <p class="card-text text-dark">Master baking by using our mystery box that will deliver to you
+                            two new recipes every month.</p>
+                        <a href="records.html" class="btn shopNow"></i> Shop Now</a>
                     </div>
-                </div><br>
-            </div>
-            
-            <div class="col-lg-4 col-sm-4">
-                <div class="card bg-light">
-                    <img src="../Images/Macarons.jpg" class="card-img-top cardImageStyling" alt="Top Baking Recipe">
-                    <div class="card-body">
-                        <h5 class="card-title text-dark">Vanilla Rose Macarons</h5>
-                        <p class="card-text text-dark">Take a look at our new collection of turntables.</p><br>
-                        <a href="turntables.html" class="btn btn-dark bg-white text-dark">Take Me There</a>
-                    </div>
-                </div><br>
+                </div>
             </div>
 
             <div class="col-lg-4 col-sm-4">
-                <div class="card bg-light">
-                    <img src="../Images/utensils.jpg" class="card-img-top cardImageStyling" alt="Cake Makin' Tools">
+                <div class="card card-bg-white border-0">
+                    <img src="../Images/brownie.webp" class="card-img-top cardImageStyling" alt="Baking Packages">
                     <div class="card-body">
-                        <h5 class="card-title text-dark">Cake Makin' Tools</h5>
-                        <p class="card-text text-dark">Got Any Questions?<br>Ask us anything and we'll answer as soon
-                            as we can!</p>
-                        <a href="contact.html" class="btn btn-dark bg-white text-dark">Take Me There</a>
+                        <h5 class="card-title text-dark">Baking Packages</h5>
+                        <p class="card-text text-dark">Bake the confectionary of your choice, whilst using the freshest
+                            ingredients.</p>
+
+                        <a href="records.html" class="btn shopNow"></i> Shop Now</a>
                     </div>
-                </div><br>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-4">
+                <div class="card card-bg-white border-0">
+                    <img src="../Images/utensils.jpg" class="card-img-top cardImageStyling" alt="Baking Utensils">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">Utensils Shop</h5>
+                        <p class="card-text text-dark">Fournish your home kitchen with the most modern equipment to bake
+                            your treats.</p>
+                        <a href="records.html" class="btn shopNow"></i> Shop Now</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <h1 class="p-5 offerText">WHY CHOOSE BAKER'S DOZEN?</h1>
+    <div class="">
+        <img src="../Images/IngredientsOnTable.jpg" class="homeImageStyling" alt="">
+        <h2 class="choseUsText">WITH US ALL YOU NEED IS,<br>IN ONE SUSTAINABLE PACKAGE.</h2>
+        <h2 class="choseUsText2">THESE PACKAGES HELP GIVE YOU ALL YOU NEED TO START BAKING.<br>NO NEED TO GO SEARCHING
+            FAR AND WIDE FOR THE BEST INGREDIENTS. THEY ARE ALL IN ONE PLACE.</h2>
+    </div>
+
+    <h1 class="pt-5 offerText">HOW DOES IT WORK?</h1>
+    <div class="sm-cards-showcase p-2">
+        <div class="flexBox">
+            <div class="col-lg-3  col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/spoon.svg" class="card-img-top cardImageStyling" alt="Subscription Box">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">RECIPE CREAITON</h5>
+                        <p class="card-text text-dark">Out talented pastry chef will create wonderful recipes that make you mouth water.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/computer.svg" class="card-img-top cardImageStyling" alt="Baking Packages">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">YOU PLACE AN ORDER</h5>
+                        <p class="card-text text-dark">You order the package from our site.</p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/deliver.svg" class="card-img-top cardImageStyling" alt="Baking Utensils">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">WE DELIVER TO YOUR DOORSTEP</h5>
+                        <p class="card-text text-dark">Product is then delivered to your doorstep as soon as possible.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/bake.svg" class="card-img-top cardImageStyling" alt="Baking Utensils">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">YOU BAKE YOUR HEART OUT</h5>
+                        <p class="card-text text-dark">Enjoy baking your delicious treat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="readMore btn" href="howItWorks.html">Learn More</a>
+
+
+
 </body>
 
 </html>
