Update 3 with Baking Package Page

--- a/Baker's Dozen Prototype/HTML/index.html
+++ b/Baker's Dozen Prototype/HTML/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg nav-bg-white opacity-100">
+    <nav class="navbar fixed-top navbar-expand-lg nav-bg-white opacity-100 shadow p-3 mb-5 bg-white rounded">
         <div class="container-fluid ">
             <a class="navbar-brand" href="index.html">
                 <img src="../Images/Logo.png" alt="Logo" width="150" class="d-inline-block align-text-top">
@@ -41,16 +41,19 @@
                         <a class="nav-link" href="subscriptionKit.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="bakingKit.html">RECIPES</a>
+                        <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="howItWorks.html">HOW IT WORKS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="howItWorks.html">UTENSILS SHOP</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link disabled" href="shoppingCart.html"><i
-                                class="fa-solid fa-cart-shopping"></i></a>
+                                class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
@@ -63,7 +66,7 @@
         <img src="../Images/homeImage2.jpg" class="homeImageStyling" alt="">
         <h2 class="homeImageText">WONDEFUL TREATS,</h2><br>
         <h2 class="homeImageText2"> MADE RIGHT AT HOME.</h2>
-        <a class="homeImageBtn btn" href="#">Take a look at our recipes</a>
+        <a class="homeImageBtn btn" href="bakingKit.html">Take a look at our recipes</a>
     </div>
 
     <h1 class="p-5 offerText" id="offer">WHAT DO WE OFFER?</h1>
@@ -76,7 +79,7 @@
                         <h5 class="card-title text-dark">Mystery Box</h5>
                         <p class="card-text text-dark">Master baking by using our mystery box that will deliver to you
                             two new recipes every month.</p>
-                        <a href="records.html" class="btn shopNow"></i> Shop Now</a>
+                        <a href="#" class="btn shopNow">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +92,7 @@
                         <p class="card-text text-dark">Bake the confectionary of your choice, whilst using the freshest
                             ingredients.</p>
 
-                        <a href="records.html" class="btn shopNow"></i> Shop Now</a>
+                        <a href="bakingKit.html" class="btn shopNow"> Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -101,7 +104,7 @@
                         <h5 class="card-title text-dark">Utensils Shop</h5>
                         <p class="card-text text-dark">Fournish your home kitchen with the most modern equipment to bake
                             your treats.</p>
-                        <a href="records.html" class="btn shopNow"></i> Shop Now</a>
+                        <a href="#" class="btn shopNow">Shop Now</a>
                     </div>
                 </div>
             </div>
