With Subscription page

--- a/Baker's Dozen Prototype/HTML/index.html
+++ b/Baker's Dozen Prototype/HTML/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto px-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="subscriptionKit.html">MYSTERY BOX</a>
+                        <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
@@ -52,8 +52,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i
-                                class="fa-solid fa-cart-shopping fa-2x"></i></a>
+                        <a class="nav-link disabled" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
