--- a/Baker's Dozen Prototype/HTML/mysterybox.html
+++ b/Baker's Dozen Prototype/HTML/mysterybox.html
@@ -42,10 +42,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto" id="middleNAV">
                     <li class="nav-item">
-                        <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
+                        <a class="nav-link active" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
+                        <a class="nav-link" href="bakingKit.html">BAKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
@@ -53,7 +53,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i
+                        <a class="nav-link" href="shoppingCart.html"><i
                                 class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
@@ -130,7 +130,6 @@
                     <img src="../Images/Recipe.svg" class="card-img-top cardImageStyling" alt="Subscription Box">
                     <div class="card-body">
                         <h5 class="card-title text-dark">RECIPE</h5>
-                        <p class="card-text text-dark">You order the package of your liking from our site.</p>
                     </div>
                 </div>
             </div>
