--- a/Baker's Dozen Prototype/HTML/productDetails.html
+++ b/Baker's Dozen Prototype/HTML/productDetails.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
+                        <a class="nav-link active" href="bakingKit.html">BAKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
@@ -52,7 +52,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i
+                        <a class="nav-link" href="shoppingCart.html"><i
                                 class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
@@ -76,8 +76,8 @@
                         <div class="card-body bigProductDetails">
                             <h2 class="card-title">Double Chocolate Chip Muffin Package</h2>
                             <p class="card-text price">€25</p>
-                            <hr class="p-4">
-                            <p class="desc pb-4">This bake, serves up to <b>4 people</b>. Estimaed Prep Time: <b>30 minutes</b>. Estimated Bake Time: <b>10 minutes</b>.</p>
+                            <input type="number" min="1" class="quantityInput" placeholder="Quantity">
+                            <p class="desc pt-4 pb-4">This bake, serves up to <b>4 people</b>. Estimaed Prep Time: <b>30 minutes</b>. Estimated Bake Time: <b>10 minutes</b>.</p>
                             <a href="#" class="btn shopNow">ADD TO CART</a>
                         </div>
                     </div>
