--- a/Baker's Dozen Prototype/HTML/utensilsShop.html
+++ b/Baker's Dozen Prototype/HTML/utensilsShop.html
@@ -44,15 +44,15 @@
                         <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
+                        <a class="nav-link" href="bakingKit.html">BAKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
+                        <a class="nav-link active" href="utensilsShop.html">UTENSILS SHOP</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i
+                        <a class="nav-link" href="shoppingCart.html"><i
                                 class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
