--- a/Baker's Dozen Prototype/HTML/index.html
+++ b/Baker's Dozen Prototype/HTML/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
+                        <a class="nav-link" href="bakingKit.html">BAKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
@@ -51,7 +51,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
+                        <a class="nav-link" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
