--- a/Baker's Dozen Prototype/HTML/bakingKit.html
+++ b/Baker's Dozen Prototype/HTML/bakingKit.html
@@ -49,11 +49,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactUs.html">CONTACT US</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="shoppingCart.html"><i
-                                class="fa-solid fa-cart-shopping fa-2x"></i></a>
+                        <a class="nav-link" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
@@ -69,10 +71,10 @@
     <div class="container p-5">
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -82,10 +84,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -95,10 +97,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -131,10 +133,10 @@
 
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -144,10 +146,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -157,10 +159,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -173,10 +175,10 @@
 
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -186,10 +188,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -199,10 +201,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -212,10 +214,9 @@
                 </a>
             </div>
         </div>
-
+        
         <div class="card mb-3 border-0" style="max-width: 100%;">
             <div class="row g-0">
-
                 <div class="col-md-8">
                     <div class="card-body bigProduct">
                         <h1 class="card-title">Double Chocolate Chip Muffin Package</h1>
@@ -227,18 +228,18 @@
                 </div>
                 <div class="col-md-4">
                     <img src="../Images/Macarons.jpg" class="img-fluid rounded-start " alt="...">
-                    <a href="../HTML/productDetails.html"  class="btn shopNowBakingBigRight"><img src="../Images/plus.svg" class="plusBakingBig"
-                            alt=""></a>
+                    <a href="../HTML/productDetails.html"  class="btn shopNowBakingBigRight"><img src="../Images/plus.svg" class="plusBakingBig" alt="">
+                    </a>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -248,10 +249,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -261,10 +262,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="../HTML/productDetails.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
