--- a/Baker's Dozen Prototype/HTML/index.html
+++ b/Baker's Dozen Prototype/HTML/index.html
@@ -48,6 +48,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactUs.html">CONTACT US</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -77,7 +80,7 @@
                         <h5 class="card-title text-dark">Mystery Box</h5>
                         <p class="card-text text-dark">Master baking by using our mystery box that will deliver to you
                             two new recipes every month.</p>
-                        <a href="#" class="btn shopNow">Shop Now</a>
+                        <a href="../HTML/mysterybox.html" class="btn shopNow">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +105,7 @@
                         <h5 class="card-title text-dark">Utensils Shop</h5>
                         <p class="card-text text-dark">Fournish your home kitchen with the most modern equipment to bake
                             your treats.</p>
-                        <a href="#" class="btn shopNow">Shop Now</a>
+                        <a href="../HTML/utensilsShop.html" class="btn shopNow">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +127,7 @@
                 <div class="card cardSize text-center mx-auto card-bg-white border-0">
                     <img src="../Images/spoon.svg" class="card-img-top cardImageStyling" alt="Subscription Box">
                     <div class="card-body">
-                        <h5 class="card-title text-dark">RECIPE CREAITON</h5>
+                        <h5 class="card-title text-dark">RECIPE CREATION</h5>
                         <p class="card-text text-dark">Out talented pastry chef will create wonderful recipes that make you mouth water.</p>
                     </div>
                 </div>
@@ -163,11 +166,14 @@
         </div>
     </div>
 
+    <h1 class="pt-5 offerText"></h1>
+
     <hr class="pb-5">
     <footer>
         <div class="footer-content">
             <h3 class="footer-title">#bakersdozen</h3>
             <p>We are a small start up business who aims to provide the best quality at affordable pricepoints. Our main goal as a company is to instill the skill of baking into each and everyone of our clients. We truly feel that baking is for everyone.</p>
+            <p>Want to get in touch? <span><a href="contactUs.html" class="signUpHere">Talk to us here!</a></span></p>
             <ul class="socials">
                 <li>
                     <i class="fa-brands fa-facebook"></i>
