--- a/Baker's Dozen Prototype/HTML/mysterybox.html
+++ b/Baker's Dozen Prototype/HTML/mysterybox.html
@@ -50,6 +50,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactUs.html">CONTACT US</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -167,6 +170,7 @@
         <div class="footer-content">
             <h3 class="footer-title">#bakersdozen</h3>
             <p>We are a small start up business who aims to provide the best quality at affordable pricepoints. Our main goal as a company is to instill the skill of baking into each and everyone of our clients. We truly feel that baking is for everyone.</p>
+            <p>Want to get in touch? <span><a href="contactUs.html" class="signUpHere">Talk to us here!</a></span></p>
             <ul class="socials">
                 <li>
                     <i class="fa-brands fa-facebook"></i>
