--- a/Baker's Dozen Prototype/HTML/bakingKit.html
+++ b/Baker's Dozen Prototype/HTML/bakingKit.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link rel="icon" type="image/svg" href="../Images/icon.svg">
+    <title>Baking Packages</title>
 
     <!--Bootstrap Links--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,6 +24,7 @@
     <!--Our Main CSS-->
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/bakingKit.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
 
 </head>
 
@@ -37,24 +39,26 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto px-5">
+                <ul class="navbar-nav mx-auto" id="middleNAV">
                     <li class="nav-item">
                         <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="bakingKit.html">BACKING PACKAGES</a>
+                        <a class="nav-link active" href="bakingKit.html">BAKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="howItWorks.html">HOW IT WORKS</a>
+                        <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="howItWorks.html">UTENSILS SHOP</a>
+                        <a class="nav-link" href="contactUs.html">CONTACT US</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i
-                                class="fa-solid fa-cart-shopping fa-2x"></i></a>
+                        <a class="nav-link" href="account.html"><i class="fa-solid fa-user fa-2x"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
@@ -62,6 +66,7 @@
                 </ul>
             </div>
         </div>
+    </nav>v>
     </nav>
 
 
@@ -70,10 +75,10 @@
     <div class="container p-5">
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -83,10 +88,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -96,10 +101,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -115,7 +120,7 @@
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="../Images/Macarons.jpg" class="img-fluid rounded-start " alt="...">
-                    <a href="#" class="btn shopNowBakingBig"><img src="../Images/plus.svg" class="plusBakingBig"
+                    <a href="../HTML/productDetails.html"  class="btn shopNowBakingBig"><img src="../Images/plus.svg" class="plusBakingBig"
                             alt=""></a>
                 </div>
                 <div class="col-md-8">
@@ -132,10 +137,10 @@
 
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -145,10 +150,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -158,10 +163,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -174,10 +179,10 @@
 
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -187,10 +192,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -200,10 +205,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -213,10 +218,9 @@
                 </a>
             </div>
         </div>
-
+        
         <div class="card mb-3 border-0" style="max-width: 100%;">
             <div class="row g-0">
-
                 <div class="col-md-8">
                     <div class="card-body bigProduct">
                         <h1 class="card-title">Double Chocolate Chip Muffin Package</h1>
@@ -228,18 +232,18 @@
                 </div>
                 <div class="col-md-4">
                     <img src="../Images/Macarons.jpg" class="img-fluid rounded-start " alt="...">
-                    <a href="#" class="btn shopNowBakingBigRight"><img src="../Images/plus.svg" class="plusBakingBig"
-                            alt=""></a>
+                    <a href="../HTML/productDetails.html"  class="btn shopNowBakingBigRight"><img src="../Images/plus.svg" class="plusBakingBig" alt="">
+                    </a>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -249,10 +253,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -262,10 +266,10 @@
                 </a>
             </div>
             <div class="col-sm p-3">
-                <a href="#" class="bakingCardContent">
+                <a href="productDetails.html" class="bakingCardContent">
                     <div class="card border-0">
                         <img class="card-img-top cardImageStyling" src="../Images/cupcake.jpg">
-                        <a href="#" class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
+                        <a href="../HTML/#.html"  class="btn shopNowBaking"><img src="../Images/plus.svg" class="plusBaking"
                                 alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">Double Chocolate Chip Muffin Package</h5>
@@ -276,6 +280,28 @@
             </div>
         </div>
     </div>
+    <hr class="pb-5">
+    <footer>
+        <div class="footer-content">
+            <h3 class="footer-title">#bakersdozen</h3>
+            <p>We are a small start up business who aims to provide the best quality at affordable pricepoints. Our main goal as a company is to instill the skill of baking into each and everyone of our clients. We truly feel that baking is for everyone.</p>
+            <p>Want to get in touch? <span><a href="contactUs.html" class="signUpHere">Talk to us here!</a></span></p>
+            <ul class="socials">
+                <li>
+                    <i class="fa-brands fa-facebook"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-instagram"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-twitter"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy 2022 Baker's Dozen</p>
+        </div>
+    </footer>
 </body>
 
 </html>
