--- a/Baker's Dozen Prototype/HTML/index.html
+++ b/Baker's Dozen Prototype/HTML/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link rel="icon" type="image/svg" href="../Images/icon.svg">
+    <title>Baker's Dozen</title>
 
     <!--Bootstrap Links--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,6 +23,7 @@
 
     <!--Our Main CSS-->
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
 
 </head>
 
@@ -36,23 +38,26 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto px-5">
+                <ul class="navbar-nav mx-auto" id="middleNAV">
                     <li class="nav-item">
                         <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
+                        <a class="nav-link" href="bakingKit.html">BAKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="howItWorks.html">HOW IT WORKS</a>
+                        <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="howItWorks.html">UTENSILS SHOP</a>
+                        <a class="nav-link" href="contactUs.html">CONTACT US</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
+                        <a class="nav-link" href="account.html"><i class="fa-solid fa-user fa-2x"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
@@ -78,7 +83,7 @@
                         <h5 class="card-title text-dark">Mystery Box</h5>
                         <p class="card-text text-dark">Master baking by using our mystery box that will deliver to you
                             two new recipes every month.</p>
-                        <a href="#" class="btn shopNow">Shop Now</a>
+                        <a href="../HTML/mysterybox.html" class="btn shopNow">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -103,7 +108,7 @@
                         <h5 class="card-title text-dark">Utensils Shop</h5>
                         <p class="card-text text-dark">Fournish your home kitchen with the most modern equipment to bake
                             your treats.</p>
-                        <a href="#" class="btn shopNow">Shop Now</a>
+                        <a href="../HTML/utensilsShop.html" class="btn shopNow">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -125,7 +130,7 @@
                 <div class="card cardSize text-center mx-auto card-bg-white border-0">
                     <img src="../Images/spoon.svg" class="card-img-top cardImageStyling" alt="Subscription Box">
                     <div class="card-body">
-                        <h5 class="card-title text-dark">RECIPE CREAITON</h5>
+                        <h5 class="card-title text-dark">RECIPE CREATION</h5>
                         <p class="card-text text-dark">Out talented pastry chef will create wonderful recipes that make you mouth water.</p>
                     </div>
                 </div>
@@ -136,7 +141,7 @@
                     <img src="../Images/computer.svg" class="card-img-top cardImageStyling" alt="Baking Packages">
                     <div class="card-body">
                         <h5 class="card-title text-dark">YOU PLACE AN ORDER</h5>
-                        <p class="card-text text-dark">You order the package from our site.</p>
+                        <p class="card-text text-dark">You order the package of your liking from our site.</p>
 
                     </div>
                 </div>
@@ -163,10 +168,31 @@
             </div>
         </div>
     </div>
-    <a class="readMore btn" href="howItWorks.html">Learn More</a>
 
+    <h1 class="pt-5 offerText"></h1>
 
-
+    <hr class="pb-5">
+    <footer>
+        <div class="footer-content">
+            <h3 class="footer-title">#bakersdozen</h3>
+            <p>We are a small start up business who aims to provide the best quality at affordable pricepoints. Our main goal as a company is to instill the skill of baking into each and everyone of our clients. We truly feel that baking is for everyone.</p>
+            <p>Want to get in touch? <span><a href="contactUs.html" class="signUpHere">Talk to us here!</a></span></p>
+            <ul class="socials">
+                <li>
+                    <i class="fa-brands fa-facebook"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-instagram"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-twitter"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy 2022 Baker's Dozen</p>
+        </div>
+    </footer>
 </body>
 
 </html>
