--- a/Baker's Dozen Prototype/HTML/login.html
+++ b/Baker's Dozen Prototype/HTML/login.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link rel="icon" type="image/svg" href="../Images/icon.svg">
+    <title>Login</title>
 
     <!--Bootstrap Links--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,7 +26,7 @@
 
 </head>
 
-<body>
+<body style="overflow-y: hidden;">
     <div class="container-fluid flexBox">
         <div class="col-6 col-lg-6">
             <img src="../Images/Baker.jpg" class="loginImageStyling" alt="">
@@ -40,9 +41,12 @@
                     <div class="mb-3 pb-4">
                         <input type="password" class="formInput" placeholder="Password" required id="exampleInputPassword1">
                     </div>
-                    <div class="mb-3 form-check pb-4">
+                    <div class="mb-3 form-check pb-3">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Keep me signed in</label>
+                    </div>
+                    <div class="pb-5">
+                    <p>Don't have an account? <span><a href="signup.html" class="signUpHere">Sign up here!</a></span></p>
                     </div>
                     <button type="submit" class="btn btn-BC4C35 loginButton">Login</button>
                 </form>
