--- a/Baker's Dozen Prototype/HTML/mysterybox.html
+++ b/Baker's Dozen Prototype/HTML/mysterybox.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg" href="../Images/icon.svg">
     <title>Mystery Box</title>
 
     <!--Bootstrap Links--->
@@ -24,6 +25,7 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/bakingKit.css">
     <link rel="stylesheet" href="../CSS/subscribe.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
 
 </head>
 
@@ -38,24 +40,26 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto px-5">
+                <ul class="navbar-nav mx-auto" id="middleNAV">
                     <li class="nav-item">
-                        <a class="nav-link active" href="subscriptionKit.html">MYSTERY BOX</a>
+                        <a class="nav-link" href="mysterybox.html">MYSTERY BOX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bakingKit.html">BACKING PACKAGES</a>
+                        <a class="nav-link" href="bakingKit.html">BAKING PACKAGES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="howItWorks.html">HOW IT WORKS</a>
+                        <a class="nav-link" href="utensilsShop.html">UTENSILS SHOP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="howItWorks.html">UTENSILS SHOP</a>
+                        <a class="nav-link" href="contactUs.html">CONTACT US</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="shoppingCart.html"><i
-                                class="fa-solid fa-cart-shopping fa-2x"></i></a>
+                        <a class="nav-link active" href="account.html"><i class="fa-solid fa-user fa-2x"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="shoppingCart.html"><i class="fa-solid fa-cart-shopping fa-2x"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-BC4C35 nav-login-btn" href="login.html">Login</a>
@@ -89,7 +93,7 @@
                         <p class="card-text subCardContent">2 different recipes</p>
                         <p class="card-text p-3 subCardContent">Easy difficulty</p>
                         <p class="card-text subCardContent">Serves up to 3 people</p>
-                        <a href="#" class="btn subButton">Subscribe</a>
+                        <a href="shoppingCart.html" class="btn subButton">Subscribe</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +106,7 @@
                         <p class="card-text subCardContent">3 different recipes</p>
                         <p class="card-text p-3 subCardContent">Moderate difficulty</p>
                         <p class="card-text subCardContent">Serves up to 5 people</p>
-                        <a href="#" class="btn subButton">Subscribe</a>
+                        <a href="shoppingCart.html" class="btn subButton">Subscribe</a>
                     </div>
                 </div>
             </div>
@@ -115,12 +119,76 @@
                         <p class="card-text subCardContent">4 different recipes</p>
                         <p class="card-text p-3 subCardContent">Hard difficulty</p>
                         <p class="card-text subCardContent">Serves up to 10 people</p>
-                        <a href="#" class="btn subButton">Subscribe</a>
+                        <a href="shoppingCart.html" class="btn subButton">Subscribe</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
+    <h1 class="pb-5 subText">WHAT'S IN THE BOX?</h1>
+
+    <div class="sm-cards-showcase pt-2 pb-5">
+        <div class="flexBox">
+            <div class="col-lg-3  col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/Recipe.svg" class="card-img-top cardImageStyling" alt="Subscription Box">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">RECIPE</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/Ingredients.svg" class="card-img-top cardImageStyling" alt="Baking Packages">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">INGREDIENTS</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/Freebie.svg" class="card-img-top cardImageStyling" alt="Baking Utensils">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">FREEBIE</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-sm-3">
+                <div class="card cardSize text-center mx-auto card-bg-white border-0">
+                    <img src="../Images/Sticker.svg" class="card-img-top cardImageStyling" alt="Baking Utensils">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">STICKER</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr class="pb-5">
+    <footer>
+        <div class="footer-content">
+            <h3 class="footer-title">#bakersdozen</h3>
+            <p>We are a small start up business who aims to provide the best quality at affordable pricepoints. Our main goal as a company is to instill the skill of baking into each and everyone of our clients. We truly feel that baking is for everyone.</p>
+            <p>Want to get in touch? <span><a href="contactUs.html" class="signUpHere">Talk to us here!</a></span></p>
+            <ul class="socials">
+                <li>
+                    <i class="fa-brands fa-facebook"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-instagram"></i>
+                </li>
+                <li>
+                    <i class="fa-brands fa-twitter"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy 2022 Baker's Dozen</p>
+        </div>
+    </footer>
 </body>
 
 </html>
