--- a/BakersDozen/HTML/bakingKit.html
+++ b/BakersDozen/HTML/bakingKit.html
@@ -305,7 +305,7 @@
         </div>
     </footer>
 
-    <script src="../JavaScript/script.js"></script>
+    <script src="JavaScript/script.js"></script>
 </body>
 
 </html>
